src/nodes/expressions/snapshots/darklua_core__nodes__expressions__test__expression_from_floats__f64_0.snap
---
source: src/nodes/expressions/mod.rs
expression: result
---
Number(
    Decimal(
        DecimalNumber {
            float: 0.0,
            exponent: None,
            token: None,
        },
    ),
)
