src/nodes/expressions/snapshots/darklua_core__nodes__expressions__test__expression_from_floats__f64_1e42.snap
---
source: src/nodes/expressions/mod.rs
expression: result
---
Number(
    Decimal(
        DecimalNumber {
            float: 1.0,
            exponent: Some(
                (
                    42,
                    true,
                ),
            ),
            token: None,
        },
    ),
)
